<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
         child.project.url.inherit.append.path="false"> <!-- child.project.url.inherit.append.path="false" avoids Maven project.url to get artifactId appended in childs from reactor --> 

  <modelVersion>4.0.0</modelVersion>
  
  <groupId>org.drools</groupId>
  <artifactId>drools-ansible-rulebook-integration</artifactId>
  <version>1.0.11-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>drools-ansible-rulebook-integration-protoextractor</module>
    <module>drools-ansible-rulebook-integration-api</module>
    <module>drools-ansible-rulebook-integration-runtime</module>
<!--    <module>drools-ansible-rulebook-integration-core-rest</module>-->
    <module>drools-ansible-rulebook-integration-benchmark</module>
    <module>drools-ansible-rulebook-integration-tests</module>
    <module>drools-ansible-rulebook-integration-main</module>
    <module>drools-ansible-rulebook-integration-ha</module>
  </modules>
  
  <name>Drools :: Ansible Rulebook Integration</name>
  <description>An integration layer allowing Ansible Rulebook to use Drools as rule engine for rules evaluation.
    Drools can be invoked from Ansible either via a REST API or natively through jpy.
  </description>
  <url>https://github.com/kiegroup/drools-ansible-rulebook-integration</url>

  <properties>
    <maven.compiler.release>17</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <version.drools>9.103.1</version.drools> <!-- kiegroup/drools 9.103.x-prod-ansible branch-->
    <version.org.antlr4>4.13.0</version.org.antlr4><!-- antlr4 (and exec:java) maven plugins not managed in drools-build-parent -->
    <version.jmh>1.35</version.jmh>
  </properties>

  <repositories>
    <repository>
      <id>central</id>
      <name>Central Repository</name>
      <url>https://repo.maven.apache.org/maven2</url>
      <layout>default</layout>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
      <layout>default</layout>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>central</id>
      <name>Central Repository</name>
      <url>https://repo.maven.apache.org/maven2</url>
      <layout>default</layout>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>
    <pluginRepository>
      <id>jboss-public-repository-group</id>
      <name>JBoss Public Repository Group</name>
      <url>https://repository.jboss.org/nexus/content/groups/public/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-runtime</artifactId>
        <version>${version.org.antlr4}</version> <!-- this local dependency management takes precedence over the below import -->
      </dependency>
      <dependency>
        <groupId>org.kie</groupId>
        <artifactId>drools-build-parent</artifactId>
        <version>${version.drools}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/kiegroup/drools-ansible-rulebook-integration.git</connection>
    <developerConnection>scm:git:git@github.com:kiegroup/drools-ansible-rulebook-integration.git</developerConnection>
    <url>https://github.com/kiegroup/drools-ansible-rulebook-integration</url>
  </scm>

  <developers>
    <developer>
      <name>All developers are listed in the GitHub repository</name>
      <url>https://github.com/kiegroup/drools-ansible-rulebook-integration/graphs/contributors</url>
    </developer>
  </developers>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.11.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.3.0</version>
          <executions>
              <execution>
                  <id>attach-sources</id>
                  <goals>
                      <goal>jar</goal>
                  </goals>
              </execution>
          </executions>
        </plugin>
        <plugin>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.5.0</version>
            <executions>
                <execution>
                    <id>attach-javadocs</id>
                    <goals>
                        <goal>jar</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
              <doclint>-missing</doclint>
              <failOnError>false</failOnError>
              <failOnWarnings>false</failOnWarnings>
            </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.3.0</version>
          <executions>
            <execution>
              <goals>
                <goal>test-jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.antlr</groupId>
          <artifactId>antlr4-maven-plugin</artifactId>
          <version>${version.org.antlr4}</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-shade-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.6.0</version>
        </plugin>
      </plugins>
    </pluginManagement> 
    <plugins>
      <plugin> <!-- build -sources.jar -->
        <artifactId>maven-source-plugin</artifactId>
      </plugin>
      <plugin> <!-- build -javadoc.jar -->
        <artifactId>maven-javadoc-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>native</id>
      <properties>
        <quarkus.package.type>native</quarkus.package.type>
      </properties>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
    </profile>

    <profile>
      <id>rewrite</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.openrewrite.maven</groupId>
            <artifactId>rewrite-maven-plugin</artifactId>
            <version>4.42.0</version>
            <configuration>
              <activeRecipes>
                <recipe>org.openrewrite.java.testing.junit5.JUnit4to5Migration</recipe>
              </activeRecipes>
            </configuration>
            <dependencies>
              <dependency>
                <groupId>org.openrewrite.recipe</groupId>
                <artifactId>rewrite-testing-frameworks</artifactId>
                <version>1.23.0</version>
              </dependency>
            </dependencies>
          </plugin>
        </plugins>
      </build>
    </profile>

    <!-- Default profile - exclude memory leak tests -->
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <excludes>
                <exclude>**/MemoryLeakTest.java</exclude>
              </excludes>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <!-- Memory leak tests profile -->
    <profile>
      <id>memoryleak-tests</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <includes>
                <include>**/MemoryLeakTest.java</include>
              </includes>
              <systemPropertyVariables>
                <org.slf4j.simpleLogger.log.org.drools.ansible.rulebook.integration>WARN</org.slf4j.simpleLogger.log.org.drools.ansible.rulebook.integration>
              </systemPropertyVariables>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
